--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,15 +1,20 @@
 main{
-    padding-top: 10vw;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     align-items: center;
-    flex-direction: column;
     gap: 2vw;
 }
 
-.greetings{
+.greetings, .container-info{
     display: flex;
     flex-direction: column;
     gap: 1vw;
+    width: 40vw;
+}
+
+.container-info{
+    width: 30vw;
 }
 
 .success{
@@ -43,4 +48,10 @@ main{
     justify-content: center;
     align-items: center;
 
+}
+
+aside{
+    width: 23vw;
+    height: 100%;
+    border: 0.1vw solid #ccc;
 }
