--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,19 +1,31 @@
 main{
+    padding-top: 5vw ;
     width: 100vw;
     height: 100vh;
     display: flex;
     align-items: center;
     gap: 2vw;
+    background-image: linear-gradient(255deg,rgb(228, 243, 252), rgb(210, 207, 252));
 }
 
 .greetings, .container-info{
+    padding: 3vw 0;
     display: flex;
     flex-direction: column;
     gap: 1vw;
+    height: 100%;
     width: 40vw;
 }
 
 .container-info{
+    width: 30vw;
+}
+
+.greetings {
+    border-right: 0.1vw solid #ccc;
+}
+
+.greetings p, .container-info p{
     width: 30vw;
 }
 
@@ -46,12 +58,11 @@ main{
     color: #fff;
     display: flex;
     justify-content: center;
-    align-items: center;
-
+    align-items: center; 
 }
 
 aside{
     width: 23vw;
     height: 100%;
-    border: 0.1vw solid #ccc;
+    border-right: 0.1vw solid #ccc;
 }
