--- a/assets/css/reviewCards.css
+++ b/assets/css/reviewCards.css
@@ -5,6 +5,8 @@ body{
 }
 
 main{
+    background-image: linear-gradient(255deg,rgb(228, 243, 252), rgb(210, 207, 252));
+    background-size: cover;
     display: grid;
     grid-template-columns: 80% 20%;
     align-items: center;
@@ -13,6 +15,7 @@ main{
 }
 
 .card{
+    background-color: #fff;
     position: relative;
     display: grid;
     grid-template-areas: 
