--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,7 +5,7 @@ main{
     display: flex;
     align-items: center;
     gap: 2vw;
-    background-image: linear-gradient(255deg,rgb(228, 243, 252), rgb(210, 207, 252));
+    background: #fff;
 }
 
 .greetings, .container-info{
