--- a/assets/css/structure.css
+++ b/assets/css/structure.css
@@ -9,11 +9,12 @@
     font-family: 'Play', sans-serif;
     list-style: none;
     text-decoration: none;
+    color: #0b0a2e;
 }
 
 .header{
     border-bottom: 0.1vw solid #ccc;
-    background-color: #ffffff45;
+    background: #b8b8b8;
     width: 100vw;
     height: 5vw;
     position: absolute;
@@ -31,7 +32,6 @@
 .logo{
     font-size: 1.8vw;
     cursor: pointer;
-    color: #000;
 }
 
 .links{
@@ -41,7 +41,6 @@
 
 .links li a, .links li button{
     cursor: pointer;
-    color: #000;
     white-space: nowrap;
     font-size: 1.2vw;
     background: none;
@@ -52,6 +51,7 @@
 }
 
 footer {
+    background-color: #4c4c4d;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -59,5 +59,9 @@ footer {
     height: 5vw;
     width: 100vw;
     border-top: 0.1vw solid #ccc;
-    background-image: linear-gradient(255deg,rgba(228, 243, 252, 0.7), rgba(210, 207, 252, 0.7));
+}
+
+footer p {
+    color: #fff;
+
 }
