--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,7 +1,7 @@
 main{
     padding-top: 5vw ;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     gap: 2vw;
