--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -70,5 +70,21 @@
     .container-inputs {
         width: 90vw;
         height: 50vw;
+        row-gap: 2vw;
+    }
+
+    .form div input{
+        font-size: 3.5vw;
+        padding: 1vw;
+    }
+
+    .form button {
+        width: 25vw;
+        font-size: 3.5vw;
+    }
+
+    .requirements {
+        font-size: 2.4vw;
+        padding-bottom: 0.3vw;
     }
 }
